
[gd_scene load_steps=17 format=2]

[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=1]
[ext_resource path="res://Objects/Old_Man-Sheet.png" type="Texture" id=2]
[ext_resource path="res://UI/Textbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Old_Man.gd" type="Script" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=7]

[ext_resource path="res://Objects/OldManWanderController.gd" type="Script" id=8]


[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 21, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 21, 0, 21, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 42, 0, 21, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 21, 36 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.0
height = 16.0

[sub_resource type="CircleShape2D" id=8]
radius = 6.0

[node name="OldMan" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )

[node name="OldManSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

frame = 1

playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Textbox" parent="." instance=ExtResource( 3 )]

[node name="OldManWanderController" parent="." instance=ExtResource( 6 )]
script = ExtResource( 8 )
wander_range = 128


[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 16 )
shape = SubResource( 8 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]

[editable path="PlayerDetectionZone"]

[editable path="OldManWanderController"]

[editable path="SoftCollision"]
